update template handling
